swapped image grid for carousel due to alignment issues. Need to resize photos for carousel.

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,19 @@ li>a>img {
     list-style-type: none;
 }
 
+a>h5 {
+    text-decoration:none;
+}
+
+/* p {
+    color: #000;
+} */
+
+/* div>a>img {
+    height: 200px;
+    width: 200px;
+} */
+
 
 .footer {
     position: absolute;
